# dtos/calendar.go
@@ -16,3 +16,12 @@ type CalendarResponse struct {
 	Description string `json:"description"`
 	Major       string `json:"major_name"`
 }
+
+type UpdateCalendarRequest struct {
+	ID          int    `json:"id"`
+	Title       string `json:"title"`
+	Description string `json:"description"`
+	StartDate   string `json:"start_date"`
+	EndDate     string `json:"end_date" `
+	MajorID     int    `json:"major_id"`
+}
